--- a/AayKisan/Base.lproj/LaunchScreen.storyboard
+++ b/AayKisan/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -21,16 +22,16 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="SMS-pF-MF6">
-                                        <rect key="frame" x="159" y="386" width="96" height="46"/>
+                                        <rect key="frame" x="67" y="290" width="280" height="198"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="46" id="JiY-SL-lw9"/>
-                                            <constraint firstAttribute="width" constant="96" id="nlA-nl-ffM"/>
+                                            <constraint firstAttribute="width" constant="280" id="2kX-ok-xlp"/>
+                                            <constraint firstAttribute="width" secondItem="SMS-pF-MF6" secondAttribute="height" multiplier="842:595" id="KMx-n3-bmu"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <constraints>
-                                    <constraint firstItem="SMS-pF-MF6" firstAttribute="centerY" secondItem="s6A-Hf-DP7" secondAttribute="centerY" id="eEs-Ei-xfN"/>
+                                    <constraint firstItem="SMS-pF-MF6" firstAttribute="centerY" secondItem="s6A-Hf-DP7" secondAttribute="centerY" constant="-20" id="eEs-Ei-xfN"/>
                                     <constraint firstItem="SMS-pF-MF6" firstAttribute="centerX" secondItem="s6A-Hf-DP7" secondAttribute="centerX" id="gXa-hH-8DP"/>
                                 </constraints>
                             </view>
@@ -51,9 +52,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="96" height="46"/>
+        <image name="logo" width="299" height="141"/>
         <namedColor name="AccentColor">
-            <color red="0.96100002527236938" green="0.36899998784065247" blue="0.38400000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.96078431372549022" green="0.36862745098039218" blue="0.38431372549019605" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
