--- a/AayKisan/Base.lproj/Main.storyboard
+++ b/AayKisan/Base.lproj/Main.storyboard
@@ -90,7 +90,7 @@
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="morning_glory" translatesAutoresizingMaskIntoConstraints="NO" id="eA8-ZT-BFh">
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="morning_glory" translatesAutoresizingMaskIntoConstraints="NO" id="eA8-ZT-BFh">
                                                                     <rect key="frame" x="20" y="35" width="334" height="100"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="100" id="0sZ-v0-lWD"/>
@@ -103,7 +103,7 @@
                                                                             <rect key="frame" x="0.0" y="0.0" width="334" height="0.0"/>
                                                                         </stackView>
                                                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" adjustsFontForContentSizeCategory="YES" minimumFontSize="12" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="JFy-ll-g2T">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="274" height="34"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="284" height="34"/>
                                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                                             <textInputTraits key="textInputTraits" returnKeyType="done"/>
@@ -127,7 +127,7 @@
                                                                         <constraint firstItem="F0a-Co-LZO" firstAttribute="top" secondItem="Q2v-qH-Mit" secondAttribute="top" id="0b3-wc-qCb"/>
                                                                         <constraint firstItem="F0a-Co-LZO" firstAttribute="leading" secondItem="Q2v-qH-Mit" secondAttribute="leading" id="BnJ-IC-WIC"/>
                                                                         <constraint firstItem="F0a-Co-LZO" firstAttribute="bottom" secondItem="JFy-ll-g2T" secondAttribute="top" id="EGV-Ze-CSG"/>
-                                                                        <constraint firstItem="quo-cI-TUs" firstAttribute="leading" secondItem="JFy-ll-g2T" secondAttribute="trailing" constant="20" id="H5I-d0-p4N"/>
+                                                                        <constraint firstItem="quo-cI-TUs" firstAttribute="leading" secondItem="JFy-ll-g2T" secondAttribute="trailing" constant="10" id="H5I-d0-p4N"/>
                                                                         <constraint firstAttribute="trailing" secondItem="F0a-Co-LZO" secondAttribute="trailing" id="IWk-Zv-dGD"/>
                                                                         <constraint firstAttribute="bottom" secondItem="JFy-ll-g2T" secondAttribute="bottom" id="IqI-zJ-p63"/>
                                                                         <constraint firstAttribute="trailing" secondItem="quo-cI-TUs" secondAttribute="trailing" id="OYZ-Rt-DTH"/>
@@ -238,6 +238,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="K1k-CZ-w7b">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                            <color key="textColor" name="AccentColor"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -264,21 +268,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aqS-Hf-Gvz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-684" y="-676"/>
-        </scene>
-        <!--MenuVC-->
-        <scene sceneID="8YI-qU-cTp">
-            <objects>
-                <viewController id="UBR-8e-J0U" customClass="MenuVC" customModule="AayKisan" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="7tE-is-aOo">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="a4B-5w-Ouo"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JAe-CK-p51" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1210" y="-1481"/>
         </scene>
         <!--oh-->
         <scene sceneID="6JE-A4-6xO">
@@ -321,7 +310,7 @@
         <image name="buy" width="24" height="24"/>
         <image name="grow_filled" width="24" height="24"/>
         <image name="more" width="24" height="24"/>
-        <image name="morning_glory" width="129.5" height="97"/>
+        <image name="morning_glory" width="300" height="223"/>
         <image name="phone.fill" catalog="system" width="128" height="114"/>
         <image name="sell" width="24" height="24"/>
         <image name="send" width="24" height="24"/>
