--- a/AayKisan/Base.lproj/Main.storyboard
+++ b/AayKisan/Base.lproj/Main.storyboard
@@ -1056,8 +1056,46 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fiX-ZH-zx5">
                                 <rect key="frame" x="0.0" y="56" width="414" height="703"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jiL-9O-br0">
-                                        <rect key="frame" x="20" y="20" width="374" height="663"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vjj-MP-XTP">
+                                        <rect key="frame" x="20" y="10" width="374" height="140"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="What's New?" adjustsFontForContentSizeCategory="YES" minimumFontSize="9" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="j1H-hp-i3b">
+                                                <rect key="frame" x="20" y="20" width="280" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="h75-Mc-inv"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                <textInputTraits key="textInputTraits" returnKeyType="send" enablesReturnKeyAutomatically="YES"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LEP-if-xgd">
+                                                <rect key="frame" x="330" y="33" width="24" height="24"/>
+                                                <color key="tintColor" name="AccentColor"/>
+                                                <state key="normal" image="send"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="taQ-FB-U9k">
+                                                <rect key="frame" x="20" y="90" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="30" id="Ash-iT-9i7"/>
+                                                    <constraint firstAttribute="height" constant="30" id="PlK-zu-nx7"/>
+                                                </constraints>
+                                                <color key="tintColor" name="AccentColor"/>
+                                                <state key="normal" image="picture"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="140" id="EE3-HP-GWk"/>
+                                            <constraint firstItem="LEP-if-xgd" firstAttribute="leading" secondItem="j1H-hp-i3b" secondAttribute="trailing" constant="30" id="SXf-pe-aaS"/>
+                                            <constraint firstItem="taQ-FB-U9k" firstAttribute="leading" secondItem="Vjj-MP-XTP" secondAttribute="leading" constant="20" id="V3M-s1-BIw"/>
+                                            <constraint firstItem="LEP-if-xgd" firstAttribute="centerY" secondItem="j1H-hp-i3b" secondAttribute="centerY" id="mMQ-TX-X3w"/>
+                                            <constraint firstItem="j1H-hp-i3b" firstAttribute="leading" secondItem="Vjj-MP-XTP" secondAttribute="leading" constant="20" id="oEN-TY-qfV"/>
+                                            <constraint firstItem="j1H-hp-i3b" firstAttribute="top" secondItem="Vjj-MP-XTP" secondAttribute="top" constant="20" id="pFd-j9-ZgL"/>
+                                            <constraint firstItem="taQ-FB-U9k" firstAttribute="top" secondItem="j1H-hp-i3b" secondAttribute="bottom" constant="20" id="vZj-0h-Sb9"/>
+                                            <constraint firstAttribute="trailing" secondItem="LEP-if-xgd" secondAttribute="trailing" constant="20" id="w2D-de-wHm"/>
+                                        </constraints>
+                                    </view>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jiL-9O-br0">
+                                        <rect key="frame" x="20" y="170" width="374" height="513"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="separatorColor" systemColor="systemGray6Color"/>
                                         <prototypes>
@@ -1159,8 +1197,11 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="jiL-9O-br0" firstAttribute="top" secondItem="fiX-ZH-zx5" secondAttribute="top" constant="20" id="1Bc-dM-sre"/>
                                     <constraint firstAttribute="trailing" secondItem="jiL-9O-br0" secondAttribute="trailing" constant="20" id="AxZ-pn-y4m"/>
+                                    <constraint firstItem="jiL-9O-br0" firstAttribute="top" secondItem="Vjj-MP-XTP" secondAttribute="bottom" constant="20" id="COB-vY-pBx"/>
+                                    <constraint firstItem="Vjj-MP-XTP" firstAttribute="leading" secondItem="fiX-ZH-zx5" secondAttribute="leading" constant="20" id="Jen-gW-ElP"/>
+                                    <constraint firstAttribute="trailing" secondItem="Vjj-MP-XTP" secondAttribute="trailing" constant="20" id="LcF-tp-dml"/>
+                                    <constraint firstItem="Vjj-MP-XTP" firstAttribute="top" secondItem="fiX-ZH-zx5" secondAttribute="top" constant="10" id="YPA-1J-1sj"/>
                                     <constraint firstAttribute="bottom" secondItem="jiL-9O-br0" secondAttribute="bottom" constant="20" id="iKt-4m-xJ6"/>
                                     <constraint firstItem="jiL-9O-br0" firstAttribute="leading" secondItem="fiX-ZH-zx5" secondAttribute="leading" constant="20" id="iLF-9U-fN2"/>
                                 </constraints>
@@ -1184,7 +1225,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="btnAttachment" destination="taQ-FB-U9k" id="qg8-0D-m2e"/>
+                        <outlet property="btnSubmitPost" destination="LEP-if-xgd" id="80H-8p-ado"/>
+                        <outlet property="tFSubmitPost" destination="j1H-hp-i3b" id="1Mo-22-fEH"/>
                         <outlet property="tblVPosts" destination="jiL-9O-br0" id="DqT-Zj-UsO"/>
+                        <outlet property="vSubmitPost" destination="Vjj-MP-XTP" id="D5f-d1-Xvu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X3H-9D-lHN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1551,6 +1596,7 @@
         <image name="morning_glory" width="300" height="223"/>
         <image name="person.fill.checkmark" catalog="system" width="128" height="88"/>
         <image name="phone.fill" catalog="system" width="128" height="114"/>
+        <image name="picture" width="40" height="40"/>
         <image name="sell" width="24" height="24"/>
         <image name="send" width="24" height="24"/>
         <namedColor name="AccentColor">
